// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card 1`] = `
<DocumentFragment>
  <div
    class="card"
  />
</DocumentFragment>
`;

exports[`Card 2 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <h4
      class="card-title"
    >
      Title
    </h4>
  </div>
</DocumentFragment>
`;

exports[`Card 3 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <h4
        class="card-title"
      >
        Title
      </h4>
      <p
        class="card-text"
      >
        Text
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card 4 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <h4
        class="card-title"
      >
        Title 3
      </h4>
      <p
        class="card-text"
      >
        Text 3
      </p>
    </div>
  </div>
</DocumentFragment>
`;
